--- a/docs/demos/template-pptx.qmd
+++ b/docs/demos/template-pptx.qmd
@@ -10,6 +10,12 @@ format:
 #| label: load
 #| message: false
 
+if (!require(pak)) {
+  install.packages("pak", dependencies = TRUE)
+}
+if (!require(flextable)) {
+  pak::pak("flextable", dependencies = TRUE)
+}
 if (!require(AAGIThemes)) {
   install.packages("AAGIThemes",
                  repos = c("https://aagi-aus.r-universe.dev",
