--- a/docs/demos/template-docx-short-report.qmd
+++ b/docs/demos/template-docx-short-report.qmd
@@ -35,6 +35,12 @@ if (require(formatR)) {
   )
 }
 
+if (!require(pak)) {
+  install.packages("pak", dependencies = TRUE)
+}
+if (!require(flextable)) {
+  pak::pak("flextable", dependencies = TRUE)
+}
 # Integrating with AAGIPalettes, AAGIThemes
 if (!require(AAGIThemes)) {
   install.packages("AAGIThemes",
@@ -45,10 +51,6 @@ if (!require(AAGIPalettes)) {
   install.packages("AAGIPalettes",
                  repos = c("https://aagi-aus.r-universe.dev",
                            "https://cloud.r-project.org"))
-}
-
-if (!require(flextable)) {
-  install.packages("flextable")
 }
 
 library(AAGIThemes)
