--- a/docs/demos/template-revealjs.qmd
+++ b/docs/demos/template-revealjs.qmd
@@ -28,6 +28,12 @@ if (params$affiliat == "CU") {
 #| label: load
 #| message: false
 
+if (!require(pak)) {
+  install.packages("pak", dependencies = TRUE)
+}
+if (!require(flextable)) {
+  pak::pak("flextable", dependencies = TRUE)
+}
 if (!require(AAGIThemes)) {
 install.packages("AAGIThemes",
                  repos = c("https://aagi-aus.r-universe.dev",
