--- a/docs/demos/template-revealjs.qmd
+++ b/docs/demos/template-revealjs.qmd
@@ -39,12 +39,14 @@ install.packages("AAGIThemes",
                  repos = c("https://aagi-aus.r-universe.dev",
                            "https://cloud.r-project.org"))
 }
+
 if (!require(AAGIPalettes)) {
 install.packages("AAGIPalettes",
                  repos = c("https://aagi-aus.r-universe.dev",
-}                           "https://cloud.r-project.org"))
+                           "https://cloud.r-project.org"))
+}
 
-if (!require("gapminder")) {
+if (!require(gapminder)) {
   install.packages("gapminder")
 }
 
