--- a/docs/release-notes.qmd
+++ b/docs/release-notes.qmd
@@ -7,13 +7,43 @@ format:
     toc: true
 ---
 
+# 0.1.3 2025-07-29
+
+## Minor changes
+
+* Set language in Word document templates to en-AU
+
+* Enhanced installation instructions
+
+* Adds header and footer to full length reports
+
+* Install AAGI R packages using R-Universe methods
+
+## Bug fixes
+
+* Ensure \usepackage{hyperref} is called
+
+* Spelling corrections
+
+# 0.1.2 2024-12-11
+
+## Minor changes
+
+* Adds example using {flextable} in AAGI Short Report PDF format document
+
+## Bug fixes
+
+* Fixes bug in AAGI Short Report PDF format wherein using {flextable} caused the PDF to not compile properly (at all)
+
 # 0.1.1 2024-10-28
 
 ## Minor Changes
 
-- Add example outputs for reports using AAGI themes for graphs and tables
-- Add starter pack instructions for easily creating an AAGI file rather than setting up your own YAML
-- Fixed links in README
+* Add example outputs for reports using AAGI themes for graphs and tables
+
+* Add starter pack instructions for easily creating an AAGI file rather than setting up your own YAML
+
+* Fixed links in README
 
 # 0.1.0 2024-09-26
 
