ensure that code is displayed

--- a/docs/release-notes.qmd
+++ b/docs/release-notes.qmd
@@ -27,7 +27,7 @@ format:
 
 ## Bug fixes
 
-* Ensure \usepackage{hyperref} is called
+* Ensure `\usepackage{hyperref}` is called
 
 * Spelling corrections
 
